# DevToolByC

./: AnsiParser.cpp  CMakeLists.txt  README.md  TerminalWidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h
parse/: ascii.hpp  stateMachine.cpp  stateMachine.hpp
